fix white space on right for mobile

--- a/resources/assets/styles/layouts/_header.scss
+++ b/resources/assets/styles/layouts/_header.scss
@@ -12,6 +12,7 @@ nav.navbar {
   min-height: 65px;
   font-family: 'lato', Arial, sans-serif;
   border-color: $dark !important;
+  margin-top: -1px;
 
   li {
     min-width: 114px;
